# simple-linear-regression

./: dummy-vars.ipynb  logistic-reg.ipynb  main.ipynb  multi-collinearity.ipynb  multi-linear-reg.ipynb  multi-linear-regression.ipynb  naive-bayes.ipynb  polynomial-reg.ipynb  pyproject.toml  simple-predictor.ipynb  support-vector-machine.ipynb  testing.ipynb  tk_main.py
tests/: test_simple_linear_regression.py
